updated feeds api response schema
